--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Spring Eureka Discovery Service</description>
 	<properties>
 		<java.version>15</java.version>
+		<maven.compiler.source>15</maven.compiler.source>
+		<maven.compiler.target>15</maven.compiler.target>
 		<spring-cloud.version>2020.0.1</spring-cloud.version>
 	</properties>
 	<dependencies>
