--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
 	<description>Spring Eureka Discovery Service</description>
 	<properties>
 		<java.version>15</java.version>
-		<maven.compiler.source>15</maven.compiler.source>
+		<spring-cloud.version>2020.0.1</spring-cloud.version>
+
 	</properties>
 	<dependencies>
 		<dependency>
@@ -66,5 +67,12 @@
 		</plugins>
 	</build>
 
+	<repositories>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+		</repository>
+	</repositories>
 
 </project>
